<resources>
    <string name="app_name">gram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="yellow">#00ffff</string>
    <string name="d">#ff00ff</string>
    <string name="back4app_server_url">https://parseapi.back4app.com</string>
    <string name="back4app_app_id">5csP7Q5YjoCBGlY57UWYorNJjI7UEbEmo8WYHjAY</string>
    <string name="back4app_client_key">c8o0dpD2eXsU1rPlcRSn8d3vnfaIDXUHxRUk9Jqb</string>
    <string name="prompt_username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">damn</string>
    <string name="stories_tab_title">Home</string>
    <string name="profile_tab_title">Profile</string>
    <string name="settings_tab_title">Settings</string>
    <string name="log_out">Log out</string>
    <string name="camera_tab_title">Camera</string>
</resources>